--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">joyc.chatterjee13@gmail.com</div>
+              <div class="col-sm-8">joyc.chatterjee3@gmail.com</div>
             </div>
-            <div class="row mt-3">
+            <!-- <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+918346899805</div>
-            </div>
+              <div class="col-sm-8">**********</div>
+            </div> -->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
               <div class="col-sm-8">Asansol, West Bengal, India</div>
@@ -603,10 +603,10 @@
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
                     <p class="pb-2">Asansol, West Bengal, India</p>
-                    <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+918346899805</p>
+                    <!-- <p class="mb-0"><strong>Phone</strong></p>
+                    <p class="pb-2">**********</p> -->
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>joyc.chatterjee13@gmail.com</p>
+                    <p>joyc.chatterjee3@gmail.com</p>
                   </div>
                 </div>
               </div>
