--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#certificate">Certificates</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
@@ -81,11 +82,11 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">joyc.chatterjee3@gmail.com</div>
+              <div class="col-sm-8">joyc.chatterjee13@gmail.com</div>
             </div>
             <!-- <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">**********</div>
+              <div class="col-sm-8">+918346899805</div>
             </div> -->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
@@ -174,6 +175,142 @@
     </div>
   </div>
 </div>
+
+<div class="section" id="certificate">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 ml-auto mr-auto">
+        <div class="h4 text-center mb-4 title">My Certificates</div>
+        <div class="nav-align-center">
+          <ul class="nav nav-pills nav-pills-primary" role="tablist">
+            <!-- <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li> -->
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#gcp" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#company" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
+            <!-- <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li> -->
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="tab-content gallery mt-5">
+      <div class="tab-pane active" id="gcp">
+        <div class="ml-auto mr-auto">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/gcp.jpg" target="_blank" download>
+                  <figure class="cc-effect"><img src="images/gcp.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Google cloud</div>
+                      <p></p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/k8s.jpg" target="_blank" download>
+                  <figure class="cc-effect"><img src="images/k8s.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Kubernetes</div>
+                      <p></p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/hadoop.jpg" target="_blank" download>
+                  <figure class="cc-effect"><img src="images/hadoop.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">hadoop</div>
+                      <p></p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/communication.jpg" target="_blank" download>
+                  <figure class="cc-effect"><img src="images/communication.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Effective communication</div>
+                      <p></p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tab-pane" id="company" role="tabpanel">
+        <div class="ml-auto mr-auto">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/bigquery.jpg" target="_blank" download>
+                  <figure class="cc-effect"><img src="images/bigquery.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Bigquery</div>
+                      <p></p>
+                    </figcaption>
+                  </figure></a></div>
+              <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                  <figure class="cc-effect"><img src="images/graphic-design-2.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Abstract Umbrella</div>
+                      <p>Graphic Design</p>
+                    </figcaption>
+                  </figure></a></div> -->
+            </div>
+            <!-- <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                  <figure class="cc-effect"><img src="images/graphic-design-3.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Cube Surface Texture</div>
+                      <p>Graphic Design</p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                  <figure class="cc-effect"><img src="images/graphic-design-4.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Abstract Line</div>
+                      <p>Graphic Design</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tab-pane" id="Photography" role="tabpanel">
+        <div class="ml-auto mr-auto">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+                  <figure class="cc-effect"><img src="images/photography-1.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Photoshoot</div>
+                      <p>Photography</p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+                  <figure class="cc-effect"><img src="images/photography-3.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Wedding Photoshoot</div>
+                      <p>Photography</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+                  <figure class="cc-effect"><img src="images/photography-2.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Beach Photoshoot</div>
+                      <p>Photography</p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+                  <figure class="cc-effect"><img src="images/photography-4.jpg" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Nature Photoshoot</div>
+                      <p>Photography</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+          </div>
+        </div>
+      </div> -->
+    </div>
+  </div>
+</div>
+
 <div class="section" id="portfolio">
   <div class="container">
     <div class="row">
@@ -393,7 +530,7 @@
           <div class="card-body">
             <div class="h5">Electronics & Communication Engineering</div>
             <p class="category">Regent Education & Research Foundation Group Of Institutions</p>
-            <p>DGPA: 7.3</p>
+            <p>DGPA: 7.42</p>
           </div>
         </div>
       </div>
@@ -410,7 +547,7 @@
           <div class="card-body">
             <div class="h5">Electronics & Telecommunication Engineering</div>
             <p class="category">The New Horizons Institute Of Technology</p>
-            <p>CGPA: 7.3</p>
+            <p>CGPA: 7.7</p>
           </div>
         </div>
       </div>
@@ -604,9 +741,9 @@
                     <p class="mb-0"><strong>Address </strong></p>
                     <p class="pb-2">Asansol, West Bengal, India</p>
                     <!-- <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">**********</p> -->
+                    <p class="pb-2">+************</p> -->
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>joyc.chatterjee3@gmail.com</p>
+                    <p>joyc.chatterjee13@gmail.com</p>
                   </div>
                 </div>
               </div>
