--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#certificate">Certificates</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
+                <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li> -->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -553,7 +553,7 @@
 
 <!-- Portfolio -->
 
-<div class="section" id="portfolio">
+<!-- <div class="section" id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
@@ -562,7 +562,7 @@
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
-            <!-- <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li> -->
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
           </ul>
         </div>
       </div>
@@ -624,7 +624,7 @@
                       <p>Graphic Design</p>
                     </figcaption>
                   </figure></a></div>
-            </div>
+            </div> -->
             <!-- <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
                   <figure class="cc-effect"><img src="images/graphic-design-3.jpg" alt="Image"/>
@@ -682,9 +682,9 @@
           </div>
         </div>
       </div> -->
-    </div>
+    <!-- </div>
   </div>
-</div>
+</div> -->
 
 <!-- Work Experience -->
 
