--- a/index.html
+++ b/index.html
@@ -897,6 +897,22 @@
           </div>
           <div class="carousel-item">
             <div class="row">
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/rupee112.png" alt="Image"/>
+                <div class="h5 pt-2">RUPEE112</div>
+                <!-- <p class="category">CEO / Webnote</p> -->
+              </div>
+              <div class="col-lg-10 col-md-9">
+                <div class="h5 mb-4 title">Responsibilities</div>
+                <p>Create infrastructure in AWS for all environment. 24X7 monitoring of application. 
+
+                  Deploy new releases and resolving issues. 
+                  
+                  Weekly and Monthly maintenance of production servers.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-4.jpg" alt="Image"/>
                 <div class="h5 pt-2">District of Columbia Regulatory Authority (DCRA)</div>
                 <!-- <p class="category">CEO / Creativem</p> -->
