--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                   </figure></a></div> -->
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/super-squad.png" target="_blank" download>
                   <figure class="cc-effect"><img src="images/super-squad.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Reward & Recognition</div>
