--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/joy.jpg" alt="Image"/></a></div>
           <div class="h2 title">Joy Chattopadhyay</div>
-          <p class="category text-white">IT, Cloud, DevOps</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">IT, Cloud, DevOps</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://rxresu.me/chattopadhyayjoy7/joy-chattopadhyay" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -82,7 +82,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">28</div>
+              <div class="col-sm-8">29</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
