--- a/index.html
+++ b/index.html
@@ -483,13 +483,13 @@
                       <p></p>
                     </figcaption>
                   </figure></a></div>
-              <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/super-squad.png" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/devops.jpg">
+                  <figure class="cc-effect"><img src="images/devops.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Reward & Recognition</div>
-                      <p>Super Squad</p>
+                      <div class="h4">DevOps & Kubernetes</div>
+                      <p>DevOps & Kubernetes</p>
                     </figcaption>
-                  </figure></a></div> -->
+                  </figure></a></div>
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/super-squad.png" target="_blank" download>
@@ -696,7 +696,25 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Apr 2023 - Present</p>
+            <p>March 2024 - Present</p>
+            <div class="h5">Inadev India Pvt Ltd</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Cloud Engineer</div>
+            <p>
+              As cloud engineer I designs, implements, and manages cloud-based systems, ensuring they are scalable, secure, and cost-effective. Responsibilities include cloud architecture design, deployment, security, cost management, automation, performance monitoring, disaster recovery, and support. I collaborate with development teams, provide technical support, and create documentation. Key skills include proficiency with cloud platforms (AWS, Azure, Google Cloud), infrastructure as code, containerization, and CI/CD tools. Strong problem-solving, communication, and continuous learning are essential. 
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Apr 2023 - March 2024</p>
             <div class="h5">Inadev India Pvt Ltd</div>
           </div>
         </div>
