--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
 
       body.dark-mode a {
-          color: #bb86fc;
+          color: #FFFF00;
       }
 
       body.dark-mode .navbar {
@@ -46,7 +46,7 @@
       }
       /* Ensure button text is visible in dark mode */
       body.dark-mode #toggle-dark-mode {
-          background-color: #bb86fc;
+          background-color: #FFFF00;
           color: #121212;
       }
 
