--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       }
 
       body.dark-mode #dark-mode-icon {
-          color: #bb86fc;
+          color: #FFFF00;
       }
       @media (max-width: 576px) {
             #dark-mode-icon {
