--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li> -->
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#gcp" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#company" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
-            <!-- <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li> -->
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
           </ul>
         </div>
       </div>
@@ -742,29 +742,29 @@
                       <p>Super Squad</p>
                     </figcaption>
                   </figure></a></div>
-              <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/graphic-design-4.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/terraform.jpg" target="_blank" download>
+                  <figure class="cc-effect"><img src="images/terraform.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Abstract Line</div>
-                      <p>Graphic Design</p>
+                      <div class="h4">Terraform</div>
+                      <p>Terraform</p>
                     </figcaption>
-                  </figure></a></div> -->
+                  </figure></a></div>
             </div>
-          <!-- </div>
+          </div>
         </div>
       </div>
       <div class="tab-pane" id="Photography" role="tabpanel">
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-1.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="images/Golang.jpg" target="_blank" download>
+                  <figure class="cc-effect"><img src="images/Golang.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Photoshoot</div>
-                      <p>Photography</p>
+                      <div class="h4">Golang</div>
+                      <p>Golang</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+              <!--<div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
                   <figure class="cc-effect"><img src="images/photography-3.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Wedding Photoshoot</div>
@@ -790,7 +790,7 @@
             </div>
           </div>
         </div>
-      </div> --> -->
+      </div> -->
     </div>
   </div>
 </div>
