feature/1-adding new js file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/main.css?ver=1.1.0" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
     <noscript>
       <style type="text/css">
         [data-aos] {
@@ -118,7 +119,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">29</div>
+              <div class="col-sm-8" id="age"></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -154,14 +155,14 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">AWS</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">70%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">GCP</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">50%</span>
               </div>
             </div>
           </div>
@@ -352,11 +353,11 @@
             </div>
           </div>
         </div>
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Mysql</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Azure DevOps</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
               </div>
             </div>
           </div>
@@ -367,7 +368,7 @@
               </div>
             </div>
           </div>
-      </div> -->
+      </div>
     </div>
     </div>
   </div>
@@ -1036,6 +1037,52 @@
   </div>
 </div>
 
+<!-- WhatsApp Button with Only Icon -->
+<div class="whatsapp-button">
+  <a href="https://wa.me/11234567890" target="_blank" id="whatsapp-button">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/024/398/617/small/whatsapp-logo-icon-isolated-on-transparent-background-free-png.png" alt="WhatsApp Logo">
+  </a>
+</div>
+
+<!-- Optional: Style the button (you can place this inside a <style> tag or in your CSS file) -->
+<style>
+  .whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+  }
+
+  #whatsapp-button img {
+    border-radius: 50%;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 50px; /* Default size for larger screens */
+    height: 50px;
+  }
+
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    #whatsapp-button img {
+      width: 40px; /* Smaller size for tablets */
+      height: 40px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    #whatsapp-button img {
+      width: 35px; /* Smaller size for mobile */
+      height: 35px;
+    }
+  }
+</style>
+
+
+
+<!-- Include Font Awesome for the WhatsApp icon (add this to the <head> of your HTML if it's not already included) -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
+
+
 <!-- Contact form -->
 
 <div class="section" id="contact">
@@ -1114,14 +1161,22 @@
       <!-- <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div> -->
       <div class="h4 title text-center">Joy Chattopadhyay</div>
       <div class="text-center text-muted">
-        <p>&copy; Joy Chattopadhyay. All rights reserved.</p>
+        <p>&copy; Joy Chattopadhyay. All rights reserved. <span id="currentYear"></span></p>
       </div>
     </footer>
+    
+    <!-- Include JavaScript to update the year -->
+    <script>
+      // Get the current year and update the text content
+      document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
+    
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
     <script src="js/core/popper.min.js?ver=1.1.0"></script>
     <script src="js/core/bootstrap.min.js?ver=1.1.0"></script>
     <script src="js/now-ui-kit.js?ver=1.1.0"></script>
     <script src="js/aos.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
+    <script src="js/age-calculator.js"></script>
   </body>
 </html>
