feature/1-edit js file

--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
 <!-- WhatsApp Button with Only Icon -->
 <div class="whatsapp-button">
   <a id="whatsapp-link" href="#" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/024/398/617/small/whatsapp-logo-icon-isolated-on-transparent-background-free-png.png" alt="WhatsApp Logo">
   </a>
 </div>
 
