feature/1-remove whatsapp button

--- a/index.html
+++ b/index.html
@@ -1038,47 +1038,48 @@
 </div>
 
 <!-- WhatsApp Button with Only Icon -->
-<div class="whatsapp-button">
+<!-- <div class="whatsapp-button">
   <a id="whatsapp-link" href="#" target="_blank">
     <img src="https://static.vecteezy.com/system/resources/thumbnails/024/398/617/small/whatsapp-logo-icon-isolated-on-transparent-background-free-png.png" alt="WhatsApp Logo">
   </a>
-</div>
+</div> -->
 
 <!-- Optional: Style the button (you can place this inside a <style> tag or in your CSS file) -->
-<style>
+<!-- <style>
   .whatsapp-button {
     position: fixed;
     bottom: 20px;
     right: 20px;
     z-index: 1000;
-  }
+  } -->
 
-  #whatsapp-link img {
+  <!-- #whatsapp-link img {
     border-radius: 50%;
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 50px; /* Default size for larger screens */
     height: 50px;
-  }
+  } -->
 
-  /* Responsive Styles */
+  <!-- /* Responsive Styles */
   @media (max-width: 768px) {
     #whatsapp-link img {
       width: 40px; /* Smaller size for tablets */
       height: 40px;
     }
-  }
+  } -->
 
-  @media (max-width: 480px) {
+  <!-- @media (max-width: 480px) {
     #whatsapp-link img {
       width: 35px; /* Smaller size for mobile */
       height: 35px;
     }
   }
-</style>
+</style> -->
 
 <!-- Link to the external JavaScript file -->
-<script src="js/whatsapp-btn.js"></script>
+<!-- <script src="js/whatsapp-btn.js"></script> -->
+
 
 
 
@@ -1141,8 +1142,8 @@
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
                     <p class="pb-2">Asansol, West Bengal, India</p>
-                    <!-- <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+************</p> -->
+                    <!--<p class="mb-0"><strong>Phone</strong></p>
+                    <p class="pb-2">+************</p>-->
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>joyc.chatterjee13@gmail.com</p>
                   </div>
