--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             .typeString('DevOps')
             .pauseFor(1000)
             .deleteAll()
+            .typeString('DevSecOps')
+            .pauseFor(1000)
+            .deleteAll()
             .typeString('System Administrator')
             .pauseFor(1000)
             .deleteAll()
