--- a/index.html
+++ b/index.html
@@ -427,6 +427,22 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">GitHub</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">ArgoCD</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -789,17 +805,17 @@
                       <p>Golang</p>
                     </figcaption>
                   </figure></a></div>
-              <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-3.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
+                  <figure class="cc-effect"><img src="images/devops-cert.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Wedding Photoshoot</div>
+                      <div class="h4">Learning in progress</div>
                       <p>Photography</p>
                     </figcaption>
                   </figure></a></div>
             </div>
-            <div class="col-md-6">
+            <!--<div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/photography-2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/wedding-photoshoot.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Beach Photoshoot</div>
                       <p>Photography</p>
@@ -813,8 +829,8 @@
                     </figcaption>
                   </figure></a></div>
             </div>
-          </div>
-        </div>-->
+          </div>-->
+        </div>
       </div>  
     </div>
   </div>
@@ -1123,6 +1139,8 @@
           <li data-target="#cc-Indicators" data-slide-to="5"></li>
           <li data-target="#cc-Indicators" data-slide-to="6"></li>
           <li data-target="#cc-Indicators" data-slide-to="7"></li>
+          <li data-target="#cc-Indicators" data-slide-to="8"></li>
+          <li data-target="#cc-Indicators" data-slide-to="9"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -1259,6 +1277,34 @@
                 <!-- <p>Design and development of a Business Portal for a state-level client in the US. </p> -->
                   <div class="h5 mb-4 title">Responsibilities</div>
                   <p>Create infrastructure in AWS for all environment. 24X7 monitoring of application. Troubleshoot & resolving infra issues. Weekly and Monthly maintenance of production servers.
+                    </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/mlchc.png" alt="Image"/>
+                <div class="h6 pt-2">MLCHC</div>
+                <!-- <p class="category">CEO / Creativem</p> -->
+              </div>
+              <div class="col-lg-10 col-md-9">
+                <!-- <p>Design and development of a Business Portal for a state-level client in the US. </p> -->
+                  <div class="h5 mb-4 title">Responsibilities</div>
+                  <p>Provide L1 support for the application and infrastructure. Monitor system performance and troubleshoot issues as they arise.
+                    </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/pw.png" alt="Image"/>
+                <div class="h6 pt-2">DOB Permit Wizard</div>
+                <!-- <p class="category">CEO / Creativem</p> -->
+              </div>
+              <div class="col-lg-10 col-md-9">
+                <!-- <p>Design and development of a Business Portal for a state-level client in the US. </p> -->
+                  <div class="h5 mb-4 title">Responsibilities</div>
+                  <p>Provide L1 support for the application and infrastructure. Deploy new releases and resolving issues. 
                     </p>
               </div>
             </div>
