--- a/index.html
+++ b/index.html
@@ -808,8 +808,8 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
                   <figure class="cc-effect"><img src="images/devops-cert.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Learning in progress</div>
-                      <p>Photography</p>
+                      <div class="h4">DevOps</div>
+                      <p>Cloud & DevOps</p>
                     </figcaption>
                   </figure></a></div>
             </div>
